SERVER-69707 Fix undefined slot error for $group with conditional expression

(cherry picked from commit 8e990303de72e04600770082e41aec92f6221c8b)